--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,10 @@
 title: My Website
 
 # Your name to show in the footer
-author: Some Person
+author: damin yeom
+
+# URL
+url: "https://Gitdamin/github.io"
 
 # --- List of links in the navigation bar --- #
 
@@ -39,20 +42,20 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "dmyeom321@gmail.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+#  facebook: deanattali
+  github: Gitdamin
+#  twitter: daattali
+#  patreon: DeanAttali
+#  youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
-#  instagram: deanat78
+  instagram: ru_pbang
 #  spotify: yourname
 #  telephone: +14159998888
 #  steam: deanat78
