--- a/_config.yml
+++ b/_config.yml
@@ -6,22 +6,23 @@
 # --- Required options --- #
 
 # Name of website
-title: Damin's Github Website
+title: Damin's github.io
 
 # Your name to show in the footer
 author: damin yeom
 
 # URL
-url: "https://Gitdamin/github.io"
+# url: "https://Gitdamin/github.io"
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
   About Me: "aboutme"
+  Category:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  # Author's home: "https://deanattali.com"
 
 # --- Logo --- #
 
