--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author: damin yeom
 
 navbar-links:
   About Me: "aboutme"
-  Category:
+  Category: "https://gitdamin.github.io/category"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
