--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-# title: Damin's github.io
+title: Gitdamin
 
 # Your name to show in the footer
 author: damin
-
-# URL
-# url: "https://Gitdamin/github.io"
 
 # --- List of links in the navigation bar --- #
 
